--- a/Django/src/myApp/club_team_classifier/templates/club_team_classifier/base.html
+++ b/Django/src/myApp/club_team_classifier/templates/club_team_classifier/base.html
@@ -7,15 +7,16 @@
     {% load bootstrap4 %}
     {% bootstrap_css %}
     <link rel="stylesheet" type="text/css" href="{% static 'club_team_classifier/css/style.css' %}">
+    <script src="{% static 'club_team_classifier/javascript/predicting.js' %}"></script>
     {% bootstrap_javascript jquery='full' %}
     <title>Club Team Classifier | {% block title %}{% endblock %}</title>
 </head>
 
 <body>
-    <nav class = "navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Image Classifier App</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Club Team Classifier</a>
     </nav>
-    <div class = "container">
+    <div class="container">
         {% block content %}{% endblock %}
     </div>
 </body>
