--- a/Django/src/myApp/club_team_classifier/templates/club_team_classifier/index.html
+++ b/Django/src/myApp/club_team_classifier/templates/club_team_classifier/index.html
@@ -3,7 +3,41 @@
 
 {% block content %}
 <div>
-    <h4 class="mt-4 mb-5 border-bottom">Club Team Prediction</h4>
+    <h4 class="mt-4 mb-5 border-bottom">Predict Club Team</h4>
+
+    <table class='table' border="1">
+        <tbody>
+            <tr>
+                <th><center>Barcelona</center></th>
+                <th><center>BayernMunchen</center></th>
+                <th><center>Chelsea</center></th>
+                <th><center>Dortmund</center></th>
+                <th><center>Juventus</center></th>
+            </tr>
+            <tr>
+                <td><center><img src="/media/logos/Barcelona.png" width="50" height="50"></center></td>
+                <td><center><img src="/media/logos/BayernMunchen.png" width="50" height="50"></center></td>
+                <td><center><img src="/media/logos/Chelsea.jpg" width="50" height="50"><center></td>
+                <td><center><img src="/media/logos/Dortmund.png" width="50" height="50"></center></td>
+                <td><center><img src="/media/logos/Juventus.png" width="35" height="50"></center></td>
+            </tr>
+
+            <tr>
+                <th><center>Liverpool</center></th>
+                <th><center>ManchesterCity</center></th>
+                <th><center>ManchesterUnited</center></th>
+                <th><center>Milan</center></th>
+                <th><center>RealMadrid</center></th>
+            </tr>
+            <tr>
+                <td><center><img src="/media/logos/Liverpool.jpeg" width="50" height="50"></center></td>
+                <td><center><img src="/media/logos/ManC.png" width="50" height="50"></center></td>
+                <td><center><img src="/media/logos/ManU.png" width="50" height="50"><center></td>
+                <td><center><img src="/media/logos/Milan.png" width="30" height="50"></center></td>
+                <td><center><img src="/media/logos/RealMadrid.png" width="35" height="50"></center></td>
+            </tr>
+        </tbody>
+    </table>
 
     <p>Select an image and click "Predict" button.</p>
 
@@ -12,11 +46,12 @@
     <div class="form-group">
         <div class="custom-file">
             {{ form.image }}
-            <label class="custom-file-label" for="customFile">Please select the image file you want to estimate.
+            <label class="custom-file-label" for="customFile">Please select the image file you want to predict.
             </label>
         </div>
     </div>
-    <button type="submit" class="btn btn-primary">Predict!</button>
+    <button type="submit" class="btn btn-primary" onClick="OnPredictButtonClick();">Predict</button>
+    <p><div id="predicting"></div></p>
     </form>
 </div>
 {% endblock %}
