--- a/Django/src/myApp/club_team_classifier/templates/club_team_classifier/base.html
+++ b/Django/src/myApp/club_team_classifier/templates/club_team_classifier/base.html
@@ -7,8 +7,8 @@
     {% load bootstrap4 %}
     {% bootstrap_css %}
     <link rel="stylesheet" type="text/css" href="{% static 'club_team_classifier/css/style.css' %}">
-    <script src="{% static 'club_team_classifier/javascript/predicting.js' %}"></script>
     {% bootstrap_javascript jquery='full' %}
+    <script type="text/javascript" src="{% static 'club_team_classifier/js/predicting.js' %}"></script>
     <title>Club Team Classifier | {% block title %}{% endblock %}</title>
 </head>
 
