--- a/Django/src/myApp/club_team_classifier/static/club_team_classifier/css/style.css
+++ b/Django/src/myApp/club_team_classifier/static/club_team_classifier/css/style.css
@@ -8,3 +8,39 @@ th {
     /* background: rgb(5,122,255,0.4); */
     /* opacity: 0.4; */
 }
+
+.balls {
+    width: 3.5em;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.balls div {
+    width: 0.8em;
+    height: 0.8em;
+    border-radius: 50%;
+    /* background-color: #fc2f70; */
+    /* background-color: #3cefff; */
+    background-color: rgb(5,122,255);
+    transform: translateY(-100%);
+    animation: wave 0.8s ease-in-out alternate infinite;
+}
+
+.balls div:nth-of-type(1) {
+    animation-delay: -0.4s;
+}
+
+.balls div:nth-of-type(2) {
+    animation-delay: -0.2s;
+}
+
+@keyframes wave {
+    from {
+        transform: translateY(-100%);
+    }
+    to {
+        transform: translateY(100%);
+    }
+}
