--- a/Django/src/myApp/club_team_classifier/templates/club_team_classifier/base.html
+++ b/Django/src/myApp/club_team_classifier/templates/club_team_classifier/base.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" type="text/css" href="{% static 'club_team_classifier/css/style.css' %}">
     {% bootstrap_javascript jquery='full' %}
     <script type="text/javascript" src="{% static 'club_team_classifier/js/predicting.js' %}"></script>
-    <title>Club Team Classifier | {% block title %}{% endblock %}</title>
+    <title>Soccer Team Classifier | {% block title %}{% endblock %}</title>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Club Team Classifier</a>
+        <a class="navbar-brand" href="#">Soccer Team Classifier</a>
     </nav>
     <div class="container">
         {% block content %}{% endblock %}
