--- a/Django/src/myApp/club_team_classifier/templates/club_team_classifier/index.html
+++ b/Django/src/myApp/club_team_classifier/templates/club_team_classifier/index.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div>
-    <h4 class="mt-4 mb-5 border-bottom">Predict Club Team</h4>
+    <h4 class="mt-4 mb-5 border-bottom">Predict Which Team</h4>
 
     <h5 class="mt-4 border-bottom">Image Selection Form</h5>
     <p>Select an image and click "Predict" button.</p>
@@ -33,7 +33,7 @@
         <tbody>
             <tr>
                 <th><center>Barcelona</center></th>
-                <th><center>BayernMunchen</center></th>
+                <th><center>Bayern Munchen</center></th>
                 <th><center>Chelsea</center></th>
                 <th><center>Dortmund</center></th>
                 <th><center>Juventus</center></th>
@@ -48,8 +48,8 @@
 
             <tr>
                 <th><center>Liverpool</center></th>
-                <th><center>ManchesterCity</center></th>
-                <th><center>ManchesterUnited</center></th>
+                <th><center>Manchester City</center></th>
+                <th><center>Manchester United</center></th>
                 <th><center>Milan</center></th>
                 <th><center>RealMadrid</center></th>
             </tr>
